Release/v11 (#1407)
* feat(utmstack): add UTMStack guide component and integration steps

Signed-off-by: Manuel Abascal <mjabascal10@gmail.com>

* Update frontend/src/app/app-module/guides/guide-utmstack/guide-utmstack.component.html

Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>

* Update backend/src/main/resources/config/liquibase/changelog/20251010001_adding_utmstack_integration.xml

Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>

* Added utmstack collector

* feat(utmstack): add UTMSTACK module to CollectorModuleEnum and update dependency version

* feat(utmstack): add UTMStack guide component and integration steps

Signed-off-by: Manuel Abascal <mjabascal10@gmail.com>

* feat(utmstack): update uninstall command for UTMStack Collector integration

Signed-off-by: Manuel Abascal <mjabascal10@gmail.com>

* feat[frontend](alert_management): changed echoes button style

* feat(action): add UTMStack Collector build step and update Dockerfile

* feat(utmstack-collector): implement DownloadVersion function for dependency management

* Update frontend/src/app/data-management/alert-management/alert-view/alert-view.component.html

Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>

* Update frontend/src/app/data-management/alert-management/alert-view/alert-view.component.ts

Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>

* Update frontend/src/app/data-management/alert-management/shared/components/data-field-render/data-field-render.component.ts

Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>

* feat(utmstack): update installation and uninstallation commands for UTMStack Collector

Signed-off-by: Manuel Abascal <mjabascal10@gmail.com>

* Update frontend/src/app/app-module/guides/guide-utmstack/guide-utmstack.component.ts

Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>

* fix[frontend](alert_management): marked as false positive on create false po